# rust-error-util

./: Cargo.toml  README.md
src/: error_group.rs  error_types.rs  lib.rs
tests/: error_group.rs
